--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
 
   cupertino_icons: ^0.1.3
   provider: ^4.1.3  # Flutter Provider # 参考 KBOY Youtube https://www.youtube.com/watch?v=iN2IjSQR7Fs
+  firebase_core: ^0.4.5  # add dependency for Firebase Core
+  cloud_firestore: ^0.13.7
 
 dev_dependencies:
   flutter_test:
